syntax = "proto3";
package hypersignprotocol.hidnode.did;

// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/hypersign-protocol/hid-node/x/did/types";

// Msg defines the Msg service.
service Msg {
      rpc CreateDID(MsgCreateDID) returns (MsgCreateDIDResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreateDID {
  string creator = 1;
  string did = 2;
  string didDocString = 3;
  string createdAt = 4;
}

message MsgCreateDIDResponse {
  uint64 id = 1;
}

// this line is used by starport scaffolding # proto/tx/message